--- a/css/style.css
+++ b/css/style.css
@@ -422,8 +422,9 @@ a, a:active {
   font-size: 15px;
   line-height: 20px;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 32%;
-          flex: 0 1 32%;
+      -ms-flex: 0 1 30%;
+          flex: 0 1 30%;
+  margin: 5px;
 }
 
 .container .footer__block_center {
@@ -468,6 +469,7 @@ a, a:active {
   display: flex;
   margin: 3px 0;
   position: relative;
+  word-wrap: break-word;
 }
 
 .container .footer img {
@@ -475,4 +477,13 @@ a, a:active {
   max-height: 25px;
   max-width: 25px;
   margin-right: 15px;
+}
+
+@media only screen and (min-device-width: 767px) and (max-device-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+  .container .footer {
+    padding: 15px 30px;
+  }
 }
