--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,6 +26,7 @@
 .container .menu__item {
   height: 50px;
   background-color: #B2A8FF;
+  border: 1px dashed  #a59af3;
 }
 
 .container .menu__item p {
@@ -51,6 +52,16 @@
 
 .container .menu .basket {
   height: 10em;
+}
+
+.container .menu .basket__main .no {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .container .content__row {
